--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root {
+    --header-height: 64px;
+}
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +9,77 @@ body {
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.body {
+    height: 100vh;
+    /*background: linear-gradient(135deg, rgba(250, 205, 104, 0.8), rgba(252, 118, 179, 0.8));*/
+    /*background: linear-gradient(135deg, rgba(156, 109, 176, 1), rgba(25, 58, 78, 1));*/
+    /*background: linear-gradient(217deg, rgba(255, 0, 0, .8), rgba(255, 0, 0, 0) 70.71%),*/
+    /*linear-gradient(127deg, rgba(0, 255, 0, .8), rgba(0, 255, 0, 0) 70.71%),*/
+    /*linear-gradient(336deg, rgba(0, 0, 255, .8), rgba(0, 0, 255, 0) 70.71%);*/
+
+    /*background: radial-gradient(ellipse at 35% 70%, rgba(21, 87, 117, 0.6), transparent),*/
+    /*radial-gradient(ellipse at 25% 35%, rgba(231, 114, 96, 1), transparent),*/
+    /*radial-gradient(ellipse at 71% 31%, rgba(246, 168, 104, 0.8), transparent),*/
+    /*radial-gradient(ellipse at 80% 63%, rgba(249, 186, 51, 0.8), transparent),*/
+    /*rgba(255, 198, 142, 0.6);*/
+}
+
+.body.light {
+    background: linear-gradient(135deg, rgba(29, 229, 226, 0.8), rgba(181, 136, 247, 0.8));
+}
+
+.body.dark {
+    background: linear-gradient(135deg, rgba(156, 109, 176, 1), rgba(25, 58, 78, 1));
+}
+
+.btn {
+    border: 0;
+    cursor: pointer;
+    letter-spacing: -0.025rem;
+    box-shadow: 0 4px 7px -1px rgb(0 0 0 / 11%), 0 2px 4px -1px rgb(0 0 0 / 7%);
+    background-size: 150%;
+    text-transform: uppercase;
+    padding: 0.75rem 1.5rem;
+    border-radius: 0.5rem;
+    transition: all .15s ease-in;
+    font-size: 0.9rem;
+    font-weight: 700;
+    line-height: 1.4;
+    display: inline-block;
+    color: #fff;
+}
+
+.btn:hover {
+    box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .09), 0 2px 3px -1px rgba(0, 0, 0, .07);
+    transform: scale(1.02)
+}
+
+.btn-info {
+    background-image: linear-gradient(310deg, #2152ff, #21d4fd);
+}
+
+.btn-danger {
+    background-image: linear-gradient(310deg, #ea0606, #ff667c);
+}
+
+.btn-warning {
+    background-image: linear-gradient(310deg, #f53939, #fbcf33);
+}
+
+.btn-primary {
+    background-image: linear-gradient(310deg, #7928ca, #ff0080);
+}
+
+.btn-secondary {
+    background-image: linear-gradient(310deg,#627594,#a8b8d8);
 }
