--- a/src/Components/Buttons/buttons.css
+++ b/src/Components/Buttons/buttons.css
@@ -2,15 +2,23 @@
     --container-height: 30px;
     --container-light: #83D8FF;
     --container-border-radius: 84px;
-    --switch-button-size: 20px;
+    --switch-button-size: 22px;
     --switch-button-position: 6px;
     --switch-button-scale: 1;
+    --switch-button-rotation: -90deg;
+    --switch-light-background: url('../../Resources/light_sky.png');
+    --switch-dark-background: url('../../Resources/dark_sky.png');
+    --switch-crator-visibility: hidden;
+    --switch-button-transition-speed: 500ms;
+    --switch-button-rotation-speed: 200ms;
+    --switch-star-background-color: transparent;
+    --switch-cloud-opacity: 1;
 }
 
 .darkmode-switch:hover {
     /*--switch-button-size: 22px;*/
     /*--switch-button-position: 5px;*/
-    --switch-button-scale: 1.13;
+    --switch-button-scale: 1.15;
 }
 
 .darkmode-switch input {
@@ -24,18 +32,29 @@
     height: var(--container-height);
     background-color: var(--container-light);
     border-radius: var(--container-border-radius);
-    transition: background-color 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+    transition: all var(--switch-button-transition-speed) cubic-bezier(0.445, 0.05, 0.55, 0.95);
     position: relative;
+    background-size: cover;
+    /*background-image: var(--switch-light-background);*/
+    box-shadow: inset 1px 2px 2px -1px rgba(0, 0, 0, 0.6),
+    inset -1px -1px 1px -1px white;
 }
 
 .darkmode-switch input:checked + label {
     background-color: #749DD6;
-    justify-content: flex-end;
+    --switch-button-rotation: 0;
+    --switch-crator-visibility: visible;
+    --switch-star-background-color: white;
+    --switch-cloud-opacity: 0;
 }
 
 .darkmode-switch input:checked + label .darkmode-switch-button {
     left: calc(var(--container-height) * 2 - var(--switch-button-position) - var(--switch-button-size));
     background-color: #FFE5B5;
+}
+
+.darkmode-switch input:checked + label::before {
+    left: calc(var(--container-height) * 2 - var(--switch-button-position) - var(--switch-button-size));
 }
 
 .darkmode-switch-button {
@@ -47,6 +66,147 @@
     top: 50%;
     background-color: #FFCF96;
     left: var(--switch-button-position);
+    transform: translateY(-50%) scale(var(--switch-button-scale)) rotate(var(--switch-button-rotation));
+    transition: left var(--switch-button-transition-speed) cubic-bezier(0.68, -0.55, 0.165, 1.55),
+    transform var(--switch-button-rotation-speed) linear;
+}
+
+.darkmode-switch label:before {
+    content: '';
+    position: absolute;
+    width: var(--switch-button-size);
+    height: var(--switch-button-size);
+    border-radius: 50%;
+    cursor: pointer;
+    top: 50%;
+    z-index: 1;
+    left: var(--switch-button-position);
+    transition: left var(--switch-button-transition-speed) cubic-bezier(0.68, -0.55, 0.165, 1.55),
+    transform var(--switch-button-rotation-speed) linear;
     transform: translateY(-50%) scale(var(--switch-button-scale));
-    transition: all 300ms cubic-bezier(0.68, -0.55, 0.365, 1.85);
+    box-shadow: inset 1px 1px 1px -1px white,
+    inset -1px -2px 1px -1px rgba(0, 0, 0, 0.3),
+    inset -1px -1px 2px -1px white,
+    2px 2px 2px -2px rgba(0, 0, 0, 0.6),
+    0 0 5px rgba(255, 255, 255, 0.3);
+}
+
+.crater {
+    position: absolute;
+    border-radius: 50%;
+    background-color: #E7CDA5;
+    visibility: var(--switch-crator-visibility);
+    transition: visibility 100ms linear;
+    box-shadow: inset 1px 1px 1px -1px rgba(0, 0, 0, 0.2),
+    inset -1px -1px 1px -1px white;
+    aspect-ratio: 1;
+    transform-origin: center;
+}
+
+.crater:nth-child(1) {
+    width: 30%;
+    right: 15%;
+    top: 25%;
+}
+
+.crater:nth-child(2) {
+    width: 15%;
+    left: 16%;
+    top: 40%;
+}
+
+.crater:nth-child(3) {
+    width: 20%;
+    left: 33%;
+    bottom: 19%;
+}
+
+.star {
+    background-color: var(--switch-star-background-color);
+    position: absolute;
+    border-radius: 50%;
+    aspect-ratio: 1;
+    transition: background-color var(--switch-button-transition-speed) ease-in-out;
+    /*box-shadow: 0 0 15px 1px rgba(255,255,255,1);*/
+}
+
+.star:nth-child(2) {
+    width: 2%;
+    left: 45%;
+    top: 20%;
+}
+
+.star:nth-child(3) {
+    width: 4%;
+    left: 32%;
+    top: 36%;
+}
+
+.star:nth-child(4) {
+    width: 3%;
+    left: 46%;
+    top: 56%;
+}
+
+.star:nth-child(5) {
+    width: 2%;
+    left: 24%;
+    top: 66%;
+}
+
+.star:nth-child(6) {
+    width: 2%;
+    left: 15%;
+    top: 46%;
+}
+
+.star:nth-child(7) {
+    width: 1%;
+    left: 42%;
+    top: 76%;
+}
+
+.cloud {
+    position: absolute;
+    background-color: #ECEFF1;
+    opacity: var(--switch-cloud-opacity);
+    border-radius: 10px;
+    transition: opacity var(--switch-button-rotation-speed) linear;
+}
+
+.cloud:nth-child(8) {
+    width: 28%;
+    height: 16%;
+    left: 36%;
+    top: 28%;
+}
+
+.cloud:last-child {
+    width: 38%;
+    height: 20%;
+    left: 50%;
+    top: 44%;
+}
+
+.cloud:after, .cloud:before{
+    content:"";
+    position:absolute;
+    background:inherit;
+    border-radius:inherit;
+}
+
+.cloud:before {
+    aspect-ratio: 1;
+    width: 30%;
+    top: -40%;
+    left: 15%;
+    border-radius: 50%;
+}
+
+.cloud:after {
+    width: 46%;
+    height: 160%;
+    top: -72%;
+    left: 40%;
+    border-radius: 50%;
 }
