--- a/src/Components/Loading/loading.css
+++ b/src/Components/Loading/loading.css
@@ -1,4 +1,7 @@
-
+.loading-container {
+    width: 100%;
+    height: 100%;
+}
 .loading-container span {
     position: absolute;
     color: white;
