--- a/src/Pages/pages.css
+++ b/src/Pages/pages.css
@@ -12,6 +12,8 @@
     --star2-width: 10%;
     --star3-width: 8%;
     --star4-width: 40%;
+    height: 100%;
+    width: 100%;
 }
 
 .home div {
@@ -39,4 +41,6 @@
     align-items: center;
     font-size: 6vw;
     flex-wrap: wrap;
+    font-weight: bolder;
+    letter-spacing: 5px;
 }
